com.sevtekin.am.docker/prod/frontend/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: amfrontend
  labels:
    app: am
spec:
  replicas: 1
  selector:
    matchLabels:
      app: am
  template:
    metadata:
      labels:
        app: am
    spec:
      containers:
        - image: us.gcr.io/assetmanager-171616/w3
          name: amfrontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: am
          volumeMounts:
            - name: tz-config
              mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
             path: /usr/share/zoneinfo/US/Pacific
