com.sevtekin.am.docker/prod/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amfrontend
  labels:
    app: am
spec:
  ports:
    - port: 443
      targetPort: 8443
      protocol: TCP
  selector:
    app: am
  type: LoadBalancer
