com.sevtekin.am.docker/prod/frontend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: amingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: tls-secret
  backend:
    serviceName: amfrontend
    servicePort: 80
